// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should show tile preview chart when that type is given 1`] = `
<pf-tile
  clientAppRoot={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Store]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  highlightMarketingContent="false"
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  settingsService={[Function SettingsService]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="Chart"
  >
    
    <div>
      <h4>
        test tile
      </h4>
    </div>
    
    <a
      class="anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    
    <div>
      
      <pf-tile-preview-chart />
      
      
      
      
      
      
      
    </div>
    
  </div>
</pf-tile>
`;

exports[`Tile should show tile preview icon when that type is given 1`] = `
<pf-tile
  clientAppRoot={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Store]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  highlightMarketingContent="false"
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  settingsService={[Function SettingsService]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="Icon"
  >
    
    <div>
      <h4>
        test tile
      </h4>
    </div>
    
    <a
      class="anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    
    <div>
      
      
      <pf-tile-preview-icon />
      
      
      
      
      
      
    </div>
    
  </div>
</pf-tile>
`;

exports[`Tile should show tile preview list when that type is given 1`] = `
<pf-tile
  clientAppRoot={[Function String]}
  enableCoreJdmInClient="null"
  enableCoreJdmInClient$={[Function Store]}
  enableCoreJdmInClientSubscription={[Function Subscriber]}
  highlightMarketingContent="false"
  ngAppRoot={[Function String]}
  previewModel={[Function Object]}
  settingsService={[Function SettingsService]}
  tile={[Function Object]}
  tilePreviewType={[Function TilePreviewType]}
>
  <div
    class="tile m-0 p-1 test cssClass"
    id="test-tile-tile"
    ng-reflect-klass="tile m-0 p-1"
    ng-reflect-ng-class="test cssClass"
    ng-reflect-ng-switch="List"
  >
    
    <div>
      <h4>
        test tile
      </h4>
    </div>
    
    <a
      class="anchor-overlay"
      href="test tile url"
      id="test-tile-tile-link"
    />
    
    <div>
      
      
      
      <pf-tile-preview-list />
      
      
      
      
      
    </div>
    
  </div>
</pf-tile>
`;
